--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="col-12 col-lg">
                     <div class="text-wrapper">
                         <h1 class="card-title mbr-fonts-style display-2"><strong>GlucoTrust</strong></h1>
-                        <p class="mbr-text mbr-fonts-style mb-4 display-7">GlucoTrust is a stunning dietary supplement that supports regulating the blood level with the help of the ultimate nutrition content present in the ingredients.<br><br>Get your Own <strong>Ocuprime&nbsp;</strong>with 51% Off&nbsp;plus<br><strong>180 day Money Back Guarantee.</strong></p>
+                        <p class="mbr-text mbr-fonts-style mb-4 display-7">GlucoTrust is a stunning dietary supplement that supports regulating the blood level with the help of the ultimate nutrition content present in the ingredients.<br><br>Get your Own <strong>GlucoTrust&nbsp;</strong>with 90% Off&nbsp;plus<br><strong>180 day Money Back Guarantee.</strong></p>
                         <div class="mbr-section-btn mt-3"><a class="btn btn-success display-7" href="https://bestofferhere.link/glucobuy">&nbsp;Yes, Give Me My Discount Link!</a> <a class="btn btn-primary display-7" href="https://bestofferhere.link/glucobuy"><span class="mobi-mbri mobi-mbri-arrow-next mbr-iconfont mbr-iconfont-btn" style="font-size: 22px;"></span>Official Site</a></div>
                     </div>
                 </div>
